Introduce new domain concept PairingArrangement
Not changing the database yet. This is meant to be a stepping stone to introduce a new table to capture the pairing arrangement.

[#177807748]