@@ -1,5 +1,6 @@
 package com.parrit.controllers;
 
+import com.parrit.entities.PairingArrangement;
 import com.parrit.entities.PairingBoard;
 import com.parrit.entities.PairingHistory;
 import com.parrit.entities.Project;
@@ -13,24 +14,19 @@ import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
 
 import java.sql.Timestamp;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Optional;
+import java.util.*;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.equalTo;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest(controllers = PairingController.class)
 @AutoConfigureMockMvc(addFilters = false)
-public class PairingControllerTest extends BaseControllerTest{
+public class PairingControllerTest extends BaseControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -66,67 +62,74 @@ public class PairingControllerTest extends BaseControllerTest{
         PairingHistory pairingHistory2 = new PairingHistory(exampleProject, "Pairing Board 2", new ArrayList<>(), new Timestamp(60000));
         PairingHistory pairingHistory3 = new PairingHistory(exampleProject, "Pairing Board 3", new ArrayList<>(), new Timestamp(60000));
 
+        PairingArrangement pairingArrangement1 = PairingArrangement.builder()
+                .pairingHistories(Set.of(pairingHistory1))
+                .project(exampleProject)
+                .pairingTime(new Timestamp(120000))
+                .build();
+        PairingArrangement pairingArrangement2 = PairingArrangement.builder()
+                .pairingHistories(Set.of(pairingHistory2, pairingHistory3))
+                .project(exampleProject)
+                .pairingTime(new Timestamp(60000))
+                .build();
+
         when(mockProjectRepository.findById(anyLong())).thenReturn(Optional.of(exampleProject));
-        when(mockPairingService.savePairing(exampleProject)).thenReturn(Arrays.asList(pairingHistory1, pairingHistory2, pairingHistory3));
+        when(mockPairingService.getSortedPairingHistory(exampleProject)).thenReturn(List.of(pairingArrangement1, pairingArrangement2));
 
-        MvcResult mvcResult = mockMvc.perform(post("/api/project/42/pairing"))
+        String expectedResult = "[{" +
+                "    \"pairingHistories\": [{\"pairingBoardName\": \"Pairing Board 1\", \"people\": []}]," +
+                "    \"pairingTime\": \"1970-01-01T00:02:00.000+0000\"" +
+                "  }," +
+                "  {" +
+                "    \"pairingHistories\": [{\"pairingBoardName\": \"Pairing Board 2\", \"people\": []}, {\"pairingBoardName\": \"Pairing Board 3\", \"people\": []}]," +
+                "    \"pairingTime\": \"1970-01-01T00:01:00.000+0000\"" +
+                "  }]";
+
+        mockMvc.perform(post("/api/project/42/pairing"))
                 .andExpect(status().isOk())
+                .andExpect(content().json(expectedResult))
                 .andReturn();
-
-        String expectedResult = "[" +
-                "{\"pairingBoardName\":\"Pairing Board 1\",\"people\":[],\"pairingTime\":\"1970-01-01T00:02:00.000+0000\"}," +
-                "{\"pairingBoardName\":\"Pairing Board 2\",\"people\":[],\"pairingTime\":\"1970-01-01T00:01:00.000+0000\"}," +
-                "{\"pairingBoardName\":\"Pairing Board 3\",\"people\":[],\"pairingTime\":\"1970-01-01T00:01:00.000+0000\"}" +
-                "]";
-
-        String returnedProject = mvcResult.getResponse().getContentAsString();
-        assertThat(returnedProject, equalTo(expectedResult));
 
         verify(mockProjectRepository).findById(42L);
         verify(mockPairingService).savePairing(exampleProject);
     }
 
     @Test
-    public void getRecommendation_getsAndPersistsTheRecommendedProject_andReturnsTheRecommendedProject() throws Exception {
-        when(mockProjectRepository.findById(anyLong())).thenReturn(Optional.of(exampleProject));
-        when(mockPairingService.getRecommendation(exampleProject)).thenReturn(exampleProject);
-        when(mockProjectRepository.save(any(Project.class))).thenAnswer(i -> i.getArguments()[0]);
-
-        MvcResult mvcResult = mockMvc.perform(get("/api/project/42/pairing/recommend")
-                .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andReturn();
-
-        String returnedProject = mvcResult.getResponse().getContentAsString();
-        assertThat(returnedProject, equalTo(exampleProjectString));
-
-        verify(mockProjectRepository).findById(42L);
-        verify(mockPairingService).getRecommendation(exampleProject);
-        verify(mockProjectRepository).save(exampleProject);
-    }
-
-    @Test
-    public void getPairingHistory_callsPairingHistoryService_andReturnsAMapOfTimestampsToListsOfPairHistories() throws Exception {
+    public void getPairingHistory_callsPairingHistoryService_andReturnsPairingArrangements() throws Exception {
         PairingHistory pairingHistory1 = new PairingHistory(exampleProject, "Pairing Board 1", new ArrayList<>(), new Timestamp(120000));
         PairingHistory pairingHistory2 = new PairingHistory(exampleProject, "Pairing Board 2", new ArrayList<>(), new Timestamp(60000));
         PairingHistory pairingHistory3 = new PairingHistory(exampleProject, "Pairing Board 3", new ArrayList<>(), new Timestamp(60000));
 
+        PairingArrangement pairingArrangement1 = PairingArrangement.builder()
+                .pairingHistories(Set.of(pairingHistory1))
+                .project(exampleProject)
+                .pairingTime(new Timestamp(120000))
+                .build();
+        PairingArrangement pairingArrangement2 = PairingArrangement.builder()
+                .pairingHistories(Set.of(pairingHistory2, pairingHistory3))
+                .project(exampleProject)
+                .pairingTime(new Timestamp(60000))
+                .build();
         when(mockProjectRepository.findById(anyLong())).thenReturn(Optional.of(exampleProject));
-        when(mockPairingService.getSortedPairingHistory(exampleProject)).thenReturn(Arrays.asList(pairingHistory1, pairingHistory2, pairingHistory3));
+        when(mockPairingService.getSortedPairingHistory(exampleProject)).thenReturn(List.of(pairingArrangement1, pairingArrangement2));
 
-        MvcResult mvcResult = mockMvc.perform(get("/api/project/42/pairing/history")
+        String expectedResult =
+                "[" +
+                        "  {" +
+                        "    \"pairingHistories\": [{\"pairingBoardName\": \"Pairing Board 1\", \"people\": []}]," +
+                        "    \"pairingTime\": \"1970-01-01T00:02:00.000+0000\"" +
+                        "  }," +
+                        "  {" +
+                        "    \"pairingHistories\": [{\"pairingBoardName\": \"Pairing Board 2\", \"people\": []}, {\"pairingBoardName\": \"Pairing Board 3\", \"people\": []}]," +
+                        "    \"pairingTime\": \"1970-01-01T00:01:00.000+0000\"" +
+                        "  }" +
+                        "]";
+
+        mockMvc.perform(get("/api/project/42/pairing/history")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
+                .andExpect(content().json(expectedResult))
                 .andReturn();
-
-        String expectedResult = "[" +
-                "{\"pairingBoardName\":\"Pairing Board 1\",\"people\":[],\"pairingTime\":\"1970-01-01T00:02:00.000+0000\"}," +
-                "{\"pairingBoardName\":\"Pairing Board 2\",\"people\":[],\"pairingTime\":\"1970-01-01T00:01:00.000+0000\"}," +
-                "{\"pairingBoardName\":\"Pairing Board 3\",\"people\":[],\"pairingTime\":\"1970-01-01T00:01:00.000+0000\"}" +
-                "]";
-
-        String returnedProject = mvcResult.getResponse().getContentAsString();
-        assertThat(returnedProject, equalTo(expectedResult));
 
         verify(mockProjectRepository).findById(42L);
         verify(mockPairingService).getSortedPairingHistory(exampleProject);
